tests/fixtures/invalid/pow_bool_bytes_none.py
# Cannot call pow() with Bool, Bytes, None
x = pow(True, b"hello", None)
